<!--
  ~ Copyright 2018
  ~ Kollins Lima (kollins.lima@gmail.com)
  ~ Otávio Sumi (otaviosumi@hotmail.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Braille Souls</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start">Play</string>
    <string name="exit">Exit</string>
    <string name="dictionaty">Dictionary</string>

    <string name="pause_menu">Pause</string>
    <string name="continue_game">Continue</string>
    <string name="main_menu">Main Menu</string>

    <string name="game_over">Game Over</string>

    <string name="hit">Hits: </string>
    <string name="miss">Miss: </string>

    <string name="play_again">Play Again</string>

    <string name="profile">Profile</string>

    <!--Strings do dicionario -->
    <string name="result">Result:</string>
    <string name="space">Space</string>
    <string name="add_key">Add</string>
    <string name="toast_unknown">Unknow</string>
    <string name="title_activity_tabbed_translator">TabbedTranslator</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="profile_name_hint">Your name</string>
    <string name="completed_achievements">Completed Achievements</string>
    <string name="achievements_to_get">Achievements Missing</string>
    <string name="number_of_players">Number of Players</string>
    <string name="learn">Learn</string>
    <string name="play">Play</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">multiplayer</string>
    <string name="table_of_points">Table of Points</string>
    <string name="player_turn">Player %d</string>

    <string name="close_button">Next Turn</string>
    <string name="close_button_end">Play Again</string>
    <string name="start_player">Start</string>
    <string name="user_profile_your_progress">Progress at</string>
    <string name="title_activity_translator">TranslatorActivity</string>
    <string name="tab_from_braille">From Braille</string>
    <string name="tab_to_braille">To Braille</string>
    <string name="translator_title">Translator</string>

    <string name="translator_to_braille_hint">Type here</string>
    <string name="translator_button">Translate</string>
    <string name="not_implemented_yet">Not impremented yet</string>
    <string name="toast_empty">Empty Input</string>
    
    <string name="skip_tutorial">Skip Tutorial</string>
    <string name="tutorial_learn_title">LEARN MODE</string>
    <string name="tutorial_learn_content1">
        In learning mode, you will learn the Braille codes of the alphabet, numbers, and some special characters.
    </string>
    <string name="tutorial_learn_content2">
        Touch the dots to select it and then click the CHECK button to evaluate.
    </string>
    <string name="tutorial_learn_content3">
        The more hits you get, the faster your progress...
    </string>
    <string name="tutorial_learn_content4">
        ...the higher your progress, the harder it\'s gonna be.
    </string>
    <string name="finish_tutorial">Ok, let\'s play</string>

</resources>

