<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:weightSum="2"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:onClick="onClickStartButton"/>

        <Button
            android:id="@+id/btnDictionaty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dictionaty"
            android:onClick="onClickDictionatyButton"/>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:onClick="onClickExitButton"/>

    </LinearLayout>


</LinearLayout>
