<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018
  ~ Kollins Lima (kollins.lima@gmail.com)
  ~ Otávio Sumi (otaviosumi@hotmail.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center">


    <FrameLayout
        android:id="@+id/animationFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:orientation="vertical"
            android:divider="@drawable/vertical_div"
            android:showDividers="middle">

            <TextView
                android:id="@+id/appNameMainMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:layout_gravity="center"
                android:gravity="center"
                android:shadowColor="@android:color/black"
                android:shadowRadius="20"
                android:text="@string/app_name"
                android:textColor="@color/main_menu_tittle_collor"
                android:autoSizeTextType="uniform"
                android:textStyle="bold" />

                <Button
                    android:id="@+id/btnLearn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button"
                    android:onClick="onClickLearnButton"
                    android:text="@string/learn"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btnPlay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button"
                    android:onClick="onClickPlayButton"
                    android:text="@string/play"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btnDictionaty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button"
                    android:onClick="onClickDictionatyButton"
                    android:text="@string/dictionaty"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btnProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button"
                    android:onClick="onClickProfileButton"
                    android:text="@string/profile"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btnExit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button"
                    android:onClick="onClickExitButton"
                    android:text="@string/exit"
                    android:textColor="@android:color/black" />

            </LinearLayout>

    </LinearLayout>

</FrameLayout>
