<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018
  ~ Kollins Lima (kollins.lima@gmail.com)
  ~ Otávio Sumi (otaviosumi@hotmail.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pause_menu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:shadowRadius="20"
        android:layout_margin="16dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/vertical_div"
        android:showDividers="middle"
        android:padding="16dp">

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_game"
            android:background="@drawable/border_button"
            android:textAllCaps="false" />


        <Button
            android:id="@+id/mainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:background="@drawable/border_button"
            android:textAllCaps="false" />

    </LinearLayout>
</LinearLayout>
