<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/tutorial_learn_title"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPagerLearnTutorial"

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:tabBackground="@drawable/tutorial_tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp">

            <android.support.design.widget.TabItem
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <android.support.design.widget.TabItem
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

        </android.support.design.widget.TabLayout>
        
    </android.support.v4.view.ViewPager>

        <Button
            android:id="@+id/skipTutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:text="@string/skip_tutorial"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/finishTutorial"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="@string/finish_tutorial"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"/>

    </FrameLayout>

</LinearLayout>