<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8">

        <TextView
            android:id="@+id/braille_translator_tittle"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fieldResult"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/braille_translator_tittle"
            android:textColor="@android:color/background_dark"
            android:background="#e7e7e7"
            android:textSize="30sp"
            android:textAlignment="center"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/espace_button"
                android:layout_width="@dimen/check_button_size"
                android:layout_height="@dimen/check_button_size"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:background="@drawable/check_button"
                android:text="@string/space"
                android:textSize="10sp"/>

        </RelativeLayout>

        <include layout="@layout/braille_keyboard_layout" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <Button
                android:id="@+id/add_button"
                android:layout_width="@dimen/check_button_size"
                android:layout_height="@dimen/check_button_size"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:background="@drawable/check_button"
                android:text="@string/add_key"
                android:textSize="10sp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:columnCount="2">


            </GridLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>