<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018
  ~ Kollins Lima (kollins.lima@gmail.com)
  ~ Otávio Sumi (otaviosumi@hotmail.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".translate.TabbedTranslator$PlaceholderFragment"
    android:background="@color/colorPrimary">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/braille_translator_tittle"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fieldResult"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/braille_translator_tittle"
            android:textColor="@android:color/background_dark"
            android:background="#d5d6d6"
            android:textSize="30sp"
            android:textAlignment="center"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/espace_button"
                android:layout_width="@dimen/check_button_size"
                android:layout_height="@dimen/check_button_size"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:background="@drawable/check_button"
                android:onClick="onClickAddSpace"
                android:text="@string/space"
                android:textSize="10sp"/>

        </RelativeLayout>

        <include layout="@layout/braille_keyboard_layout" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <Button
                android:id="@+id/add_button"
                android:layout_width="@dimen/check_button_size"
                android:layout_height="@dimen/check_button_size"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:background="@drawable/check_button"
                android:onClick="onClickAddKey"
                android:text="@string/add_key"
                android:textSize="10sp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:columnCount="2">


            </GridLayout>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>